# globber

./: .gitignore  Globber.hs  TestGlobber.hs  globber.cabal
globber-1.0.0/: globber.cabal
