name:           globber
version:        1.0.0
synopsis:       Buffalo chicken
build-type:     Simple
cabal-version:  >= 1.8

extra-source-files:
  README.md

library
  exposed-modules:
                  Globber
  build-depends:
                base < 5,
                unordered-containers
  ghc-options: -Wall

test-suite test-globber
  type: exitcode-stdio-1.0
  main-is: TestGlobber.hs
  build-depends:
                base < 5,
                globber,
                hspec,
                unordered-containers
  ghc-options: -Wall

